# The-LINUX-Programming-Interface

./: README.md
C45.Introduction_to_System_V_IPC/: README.md
C49.MEMORY_MAPPINGS/: README.md
C49.MEMORY_MAPPINGS/src/: CMakeLists.txt  prog1.cpp
